Bug 491983 - nsIBrowserHistory needs removeVisitsByTimeframe method, r=dietrich