toolkit/components/places/tests/unit/test_null_interfaces.js
@@ -51,7 +51,8 @@ _("Make an array of services to test, each specifying a class id, interface,",
   "and an array of function names that don't throw when passed nulls");
 let testServices = [
   ["browser/nav-history-service;1", "nsINavHistoryService",
-    ["queryStringToQueries", "removePagesByTimeframe", "removePagesFromHost"]],
+    ["queryStringToQueries", "removePagesByTimeframe", "removePagesFromHost",
+     "removeVisitsByTimeframe"]],
 ];
 _(testServices.join("\n"));
 
